app/client/src/scss/elements/FAQElement.scss
@use "../variables" as *;

section.section--FAQElement {
    .section_content{
        padding: 40px 0;
        .section_title{
            text-align: center;
        }

        .section_list{
            .list_item{
                display: flex;
                align-items: stretch;
                transition: max-height 1s ease-in-out, opacity 0.3s ease-in-out;
                overflow: hidden;

                .list_item_timeline{
                    min-width: 50px;
                    position: relative;

                    .circle{
                        display: block;
                        position: absolute;
                        left: 15px;
                        top: 25px;
                        width: 15px;
                        height: 15px;
                        border-radius: 20px;
                        background-color: var(--ColorWhite);
                    }
                    .line{
                        position: absolute;
                        left: 21px;
                        top: 50px;
                        height: calc(100% - 35px);
                        display: block;
                        width: 2px;
                        background-color: var(--ColorWhite);
                    }
                }

                .list_item_content{
                    transition: transform 0.1s ease-in-out;

                    .list_item_content_title{
                        &:hover{
                            color: var(--ColorWhite);
                        }

                        display: flex;
                        align-items: center;

                        .list_item_title_triangle{
                            fill: var(--ColorWhite);
                            width: 20px;
                            height: 20px;
                            transform: rotate(-90deg);
                            margin-right: 5px;
                            transition: transform 0.2s ease-in-out;
                            pointer-events: none;
                        }
                    }
                    .list_item_content_date{
                        h3{
                            color: var(--ColorWhite);

                        }
                        h4{
                            margin-top: 21px;
                            color: var(--ColorWhite);
                        }
                        color: var(--ColorWhite);
                    }

                    .list_item_content_text{
                        padding-left: 30px;
                        max-height: 0;
                        overflow: hidden;
                        transition: max-height 0.2s ease-in-out;
                        margin-bottom: 10px;

                        img{
                            width: 100%;
                            height: auto;
                            object-fit: contain;
                        }

                        .faq_gallery{
                            display: flex;
                            gap: 20px;
                            flex-wrap: wrap;
                            justify-content: space-evenly;
                        }
                    }

                    &:hover{
                        transform: translateX(5px);
                    }
                }

                &.list_item--visible{
                    .list_item_content_text{
                        max-height: 400px;
                    }
                    .list_item_content_title{
                        .list_item_title_triangle{
                            transform: rotate(0deg) translateY(-4px);
                        }
                    }

                }

                &:last-of-type{
                    .list_item_timeline{
                        .line{
                            height: calc(100% - 60px);
                        }
                    }
                }

                &.inactive{
                    max-height: 0px;
                    opacity: 0;
                }

                &.active{
                    max-height: 400px;
                    opacity: 1;
                    &.list_item--visible{
                        max-height: 500px;
                    }
                }
            }
        }
    }
}

